# mewa-sdk

./: Doxyfile  LICENSE  README.md
examples/simpletriangle/: CMakeLists.txt  simpletriangle.pro
examples/simpletriangle/src/: simpletriangle.cmake  simpletriangle.cpp  simpletriangle.h  triangleprogram.cpp  triangleprogram.h
examples/stars/: CMakeLists.txt  stars.pro
examples/stars/src/: stars.cmake  starsmodule.cpp  starsmodule.h  starsprogram.cpp  starsprogram.h
framework/: framework.cmake  framework.pri
framework/containers/: containers.cmake  containers.pri  mxbuffer.cpp  mxbuffer.h  mxbytearrayref.cpp  mxbytearrayref.h  mxfixedsizelist.h  mxgenericstring.cpp  mxgenericstring.h  mxgenericsubstring.h  mxlist.h  mxrefcounter.cpp  mxrefcounter.h  mxstring.cpp  mxstring.h
framework/geometry/: geometry.cmake  geometry.pri  mxfuzzy.h  mxgeometryutils.h  mxmathutils.h  mxmatrix.cpp  mxmatrix.h  mxnumerics.h  mxrect.h  mxvector.h
framework/moduleinterface/: appabstraction.cpp  appabstraction.h  moduleinterface.cmake  moduleinterface.pri  mxcompositor.cpp  mxcompositor.h  mxcontrol.cpp  mxcontrol.h  mxcontrolpanel.cpp  mxcontrolpanel.h  mxmodule.cpp  mxmodule.h
framework/platform/linux/: linux.cmake  main.cpp  mxdebug.h  mxopengl.h
framework/platform/qt/: main.cpp  mxdebug.h  mxmouseeventabstraction.h  mxopengl.h  mxopenglfunctions.h  mxplatformabstraction.h  platform_qt.pri  qmewapluginwindow.cpp  qmewapluginwindow.h
framework/renderer/opengl/: mxgpuarray.cpp  mxgpuarray.h  mxgpuprogram.cpp  mxgpuprogram.h  mxrenderer.cpp  mxrenderer.h  mxtexture.cpp  mxtexture.h  renderer_opengl.cmake  renderer_opengl.pri
framework/renderer/opengl/extensions/: mxopenglfunctions.cmake  mxopenglfunctions.cpp  mxopenglfunctions.h  mxopenglfunctions.pri
